Holiday/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
/Applications/BlueJ/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-sourcepath
/Users/3aovercashn/Documents/COMPPROG1/Holiday
-source
1.8
-classpath
/Applications/BlueJ/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Applications/BlueJ/objectdraw.jar:/Applications/BlueJ/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/3aovercashn/Documents/COMPPROG1/Holiday
-d
/Users/3aovercashn/Documents/COMPPROG1/Holiday/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
Holiday
-windowtitle
Holiday
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/8/docs/api/
/Users/3aovercashn/Documents/COMPPROG1/Holiday/Gift.java
/Users/3aovercashn/Documents/COMPPROG1/Holiday/Snow.java
/Users/3aovercashn/Documents/COMPPROG1/Holiday/Treé.java
/Users/3aovercashn/Documents/COMPPROG1/Holiday/ActiveGift.java
/Users/3aovercashn/Documents/COMPPROG1/Holiday/Triangul.java
/Users/3aovercashn/Documents/COMPPROG1/Holiday/ActiveOrn.java
/Users/3aovercashn/Documents/COMPPROG1/Holiday/Driver.java
/Users/3aovercashn/Documents/COMPPROG1/Holiday/Orn.java
/Users/3aovercashn/Documents/COMPPROG1/Holiday/ActiveSnow.java
<---- end of javadoc command ---->
Loading source file /Users/3aovercashn/Documents/COMPPROG1/Holiday/Gift.java...
Loading source file /Users/3aovercashn/Documents/COMPPROG1/Holiday/Snow.java...
Loading source file /Users/3aovercashn/Documents/COMPPROG1/Holiday/Treé.java...
/Users/3aovercashn/Documents/COMPPROG1/Holiday/Treé.java:21: error: invalid method declaration; return type required
	public DrawOrnament(double x, double y, double w, double h, Color c1, Color c2, Color c3, DrawingCanvas c) {
	       ^
Loading source file /Users/3aovercashn/Documents/COMPPROG1/Holiday/ActiveGift.java...
Loading source file /Users/3aovercashn/Documents/COMPPROG1/Holiday/Triangul.java...
Loading source file /Users/3aovercashn/Documents/COMPPROG1/Holiday/ActiveOrn.java...
Loading source file /Users/3aovercashn/Documents/COMPPROG1/Holiday/Driver.java...
Loading source file /Users/3aovercashn/Documents/COMPPROG1/Holiday/Orn.java...
Loading source file /Users/3aovercashn/Documents/COMPPROG1/Holiday/ActiveSnow.java...
1 error
